# RP2350-EFI-UAV

./: README.md
RP2350 無人機活塞引擎 EFI 韌體開發技術手冊/: rp2350_efi_introduction_zh.md
UAV_EFI_2stroke/: CMakeLists.txt
UAV_EFI_2stroke/src/: ecu_config.h  main.cpp
UAV_EFI_2stroke/src/drivers/: crank_sensor.cpp  uav_sensors.cpp  uav_sensors.h
UAV_EFI_2stroke/src/efi/: fuel_calc.cpp  fuel_calc.h  ignition.cpp  ignition.h
UAV_EFI_2stroke/src/fusion/: kalman_filter.h
UAV_EFI_4stroke/: CMakeLists.txt
UAV_EFI_4stroke/src/: ecu_config.h  main.cpp
UAV_EFI_4stroke/src/drivers/: crank_sensor.h
UAV_EFI_4stroke/src/efi/: ignition.cpp  ignition.h
UAV_EFI_4stroke/src/fusion/: kalman_filter.cpp
rp2350_efi_uav/: CMakeLists.txt  README.md
rp2350_efi_uav/src/: ecu_config.h  main.cpp
rp2350_efi_uav/src/drivers/: adc_sensors.cpp  adc_sensors.h  bap_sensor.cpp  bap_sensor.h  egt_sensor.h
rp2350_efi_uav/src/efi/: failsafe.h  fuel_calc.cpp  fuel_calc.h  ignition.cpp  ignition.h  pid.h
rp2350_efi_uav/src/fusion/: kalman_filter.cpp
rp2350_efi_uav/src/pio/: crank_trigger.pio
rp2350_efi_uav/src/rp2350_efi_uav(2-stroke)/: ecu_config.h  ignition.cpp  ignition.h
